--- a/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode.csproj
@@ -9,11 +9,13 @@
   <ItemGroup>
     <None Remove="day1-input" />
     <None Remove="day2-input" />
+    <None Remove="day3-input.txt" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="day1-input" />
     <EmbeddedResource Include="day2-input" />
+    <EmbeddedResource Include="day3-input.txt" />
   </ItemGroup>
 
 </Project>
