--- a/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode.csproj
@@ -10,12 +10,14 @@
     <None Remove="day1-input" />
     <None Remove="day2-input" />
     <None Remove="day3-input.txt" />
+    <None Remove="day5-input.txt" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="day1-input" />
     <EmbeddedResource Include="day2-input" />
     <EmbeddedResource Include="day3-input.txt" />
+    <EmbeddedResource Include="day5-input.txt" />
   </ItemGroup>
 
 </Project>
