--- a/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode.csproj
@@ -11,6 +11,7 @@
     <None Remove="day2-input" />
     <None Remove="day3-input.txt" />
     <None Remove="day5-input.txt" />
+    <None Remove="day6-input.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +19,7 @@
     <EmbeddedResource Include="day2-input" />
     <EmbeddedResource Include="day3-input.txt" />
     <EmbeddedResource Include="day5-input.txt" />
+    <EmbeddedResource Include="day6-input.txt" />
   </ItemGroup>
 
 </Project>
