--- a/2020/AdventOfCode.2020/AdventOfCode.2020.csproj
+++ b/2020/AdventOfCode.2020/AdventOfCode.2020.csproj
@@ -4,6 +4,15 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>AdventOfCode2020</RootNamespace>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="day1-input.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="day1-input.txt" />
+  </ItemGroup>
 
 </Project>
