Update to use AdventOfCode helper

--- a/2020/AdventOfCode.2020/AdventOfCode.2020.csproj
+++ b/2020/AdventOfCode.2020/AdventOfCode.2020.csproj
@@ -8,11 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="day1-input.txt" />
+    <None Update="Inputs\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="day1-input.txt" />
+    <PackageReference Include="AoCHelper" Version="0.10.0" />
   </ItemGroup>
 
 </Project>
